<resources>
    <string name="app_name">App057</string>
    <string name="title_activity_details">Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detail">Detail</string>
    <string name="note_title">Note Title</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="note_details">Note Details</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="content_content_content_content_content_content_content_content_content">content content content content content content content content content</string>
    <string name="textview">TextView</string>
    <string name="sample_note_title">Sample Note Title</string>
</resources>
